styles/Linktree.module.css
.main {
  min-height: 100vh;
  z-index: 2;
}
.header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: calc(20vh - 1rem);
  text-align: center;
}

.header h1 {
  font-size: 60px;
}
.grid {
  width: 100%;
  display: grid;
  gap: 1rem;
}

.card {
  border: 0;
  position: relative;
  width: 100%;
  height: 40vh;
  cursor: pointer;
}

@property --x {
  syntax: '<percentage>';
  inherits: false;
  initial-value: 0%;
}

.card {
  box-sizing: border-box;
  cursor: pointer;
  height: 50vh;
  transition: 0.2s;
  border: 0px inset #ffd60a;
}
.card:first-child {
  background: radial-gradient(
    ellipse farthest-corner at var(--x) 0%,
    #e9e1ba 0%,
    #0aff1a 50%,
    #ffd60a 100%
  ) !important;
}
.card:first-child:hover,
.card:first-child:focus,
.card:first-child:active {
  transition: 0.7s;
  border: 70px inset #0aff1a;
}

.card:last-child {
  background: radial-gradient(
    ellipse farthest-corner at var(--x) 90%,
    #ffd60a 0%,
    #0aff1a 50%,
    #e9e1ba 100%
  ) !important;
}
.card:last-child:hover,
.card:last-child:focus,
.card:last-child:active {
  transition: 0.7s;
  border: 70px inset #ffd60a;
}

.cardTitle {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 50px;
  font-weight: 900;
  line-height: 1;
  margin-bottom: 0.7rem;
  color: var(--grey-dark);
  text-shadow: rgba(0, 0, 0, 0.14) 0px 3px 4px;
}

@media (min-width: 859px) {
  .main {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
  .grid {
    grid-template-columns: repeat(2, minmax(40%, auto));
    justify-content: center;
    align-items: center;
  }
}
@media (min-width: 1200px) {
  .card {
    height: 50vh;
  }
}

